# rednext

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
src/: db.rs  http_client.rs  main.rs  sqlite.rs
