[package]
name = "rednext"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.49", features = ["derive"] }
console = "0.16.1"
dialoguer = "0.12.0"
dirs = "6.0.0"
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
rusqlite = { version = "0.37.0", features = ["chrono"] }

[features]
server = []
