[package]
name = "rednext"
version = "0.1.0"
edition = "2024"
authors = ["Mike Limansky <mike.limansky@gmail.com>"]
repository = "https://github.com/limansky/rednext"
license = "MIT"
description = "A command-line tool for managing tasks in random order."
keywords = ["task", "todo", "cli", "random"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.101"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive"] }
comfy-table = "7.2.1"
console = "0.16.2"
csv = "1.4.0"
dialoguer = "0.12.0"
dirs = "6.0.0"
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
rusqlite = { version = "0.38.0", features = ["chrono", "bundled"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
strum = { version = "0.27.2", features = ["derive"] }
